--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -1,7 +1,6 @@
 {
   "name": "buildandreleasetask",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,11 +8,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "azure-pipelines-task-lib": "^5.0.1-preview.0"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.6",
-    "@types/q": "^1.5.8"
+    "@types/q": "^1.5.8",
+    "sync-request": "^6.1.0"
   }
 }
